# meeting-assistant

./: .env.example  .gitignore  .gitlab-ci.yml  BACKEND_TASK_transcribe_utterance.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: backend-google-oauth-prompt.md
src/: App.tsx  Routes.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migrations/: 0001_create_core_tables.sql  0002_create_recordings_table.sql  0003_create_ai_settings_table.sql  0004_create_transcripts_table.sql  0005_create_meeting_summaries_table.sql  0006_create_meetings_table.sql  0007_create_cloud_session_table.sql  0008_add_cloud_recording_tracking.sql  0009_add_transcript_provisional.sql  0010_create_tus_uploads_table.sql
src-tauri/src/: db.rs  error.rs  lib.rs  settings.rs
src-tauri/src/cloud/: auth.rs  client.rs  config.rs  dto.rs  google.rs  meetings.rs  mod.rs  summary.rs  transcription.rs  tus.rs
src-tauri/src/commands/: ai.rs  attachments.rs  dashboard.rs  greet.rs  mail.rs  meetings.rs  mic_permission.rs  microphone.rs  mod.rs  models.rs  recordings.rs  storage.rs  summary.rs  transcription.rs  tus_upload.rs
src-tauri/src/diarize/: audio.rs  mod.rs  models.rs  pipeline.rs  transcriber.rs
src/atoms/: UserAtoms.ts  app-mode-atoms.ts  meetings-atoms.ts  shared-atoms.ts  user-atoms.ts
src/components/cloud/: cloud-coming-soon.tsx
src/components/dynamic-forms/: DynamicField.tsx  DynamicFormMain.tsx  dynamic-field.tsx  dynamic-form-main.tsx
src/components/dynamic-forms/check-box/: check-box.tsx  checkBox.tsx
src/components/dynamic-forms/date-picker/: date-picker.tsx  datePicker.tsx
src/components/dynamic-forms/date-time-picker/: date-time-picker.tsx  dateTimePicker.tsx
src/components/dynamic-forms/file-upload/: file-upload.tsx  fileUpload.tsx
src/components/dynamic-forms/input/: input.tsx
src/components/dynamic-forms/normal-select/: normal-select.tsx  normalSelect.tsx
src/components/dynamic-forms/paginated-select/: paginated-select.tsx  paginatedSelect.tsx
src/components/dynamic-forms/time-picker/: time-picker.tsx  timePicker.tsx
src/components/layout/: CardLayout.tsx  MainLayout.tsx  NavBar.tsx  SideBar.tsx  card-layout.tsx  main-layout.tsx  nav-bar.tsx  profile-bar.tsx  profileBar.tsx  side-bar.tsx
src/components/loaders/: global-loader.tsx  globalLoader.tsx
src/components/routing/: route-gates.tsx
src/constants/: SideNavContent.tsx  side-nav-content.tsx
src/data/auth/: userProfile.ts
src/graphql/: auth.graphql.ts  response.graphql.ts
src/graphql/settings/: institution.graphql.ts
src/hooks/: auth.ts
src/interfaces/: SharedInterfaces.ts  dynamic-form-interfaces.ts  dynamicFormInterfaces.ts  helper-interface.ts  shared-interfaces.ts
src/pages/auth/: auth-main.tsx  auth-routes.tsx  authRoutes.tsx
src/pages/auth/login/: login-main.tsx  (+4 more)
src/pages/dashboard/: dashboard-main.tsx  dashboard-routes.tsx  dashboard.tsx  dashboardRoutes.tsx  mock-data.ts
src/pages/meetings/: meeting-detail.tsx  meetings-routes.tsx  mettings-main.tsx  mock-data.ts
src/pages/mode-select/: mode-select-main.tsx
src/pages/settings/: SettingsMain.tsx  SettingsNavs.tsx  SettingsRoutes.tsx  settings-main.tsx  settings-navs.tsx  settings-routes.tsx
src/pages/user-management/: UserManagementMain.tsx  UserManagementNavs.tsx  UserManagementRoutes.tsx  user-management-main.tsx  user-management-navs.tsx  user-management-routes.tsx
src/services/: ai.ts  attachments.ts  cloud.ts  dashboard.ts  mail.ts  meetings.ts  recording.ts  storage.ts  summary.ts  transcription-settings.ts  transcription.ts  upload.ts
src/styles/: animation.css  argon-dashboard-tailwind.css
src/theme/: mui-theme.ts
src/utils/: ApolloClient.ts  case-validators.ts  caseValidators.ts  helperFunctions.ts  storeUtils.ts  validators.ts
(+51 files in other folders)
