[package]
name = "tauri-react-template"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The library crate that holds the application logic. `main.rs` is a thin shim
# that calls `app_lib::run()`, which keeps the entrypoint mobile-ready.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-runtime-wry = "2.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
cpal = "0.15"
hound = "3.5"

# On-device speech pipeline: Silero VAD + speaker embeddings + Whisper ASR, all
# offline via ONNX. `download-binaries` (a default feature) fetches the prebuilt
# sherpa-onnx runtime at build time, so no system install is required.
sherpa-rs = "0.6"
# Resamples the device-rate microphone capture down to the 16 kHz mono the models
# require.
rubato = "0.15"
# Model fetch-on-first-use: download the ONNX models and unpack the Whisper
# tar.bz2 bundle into the app data dir.
ureq = "2"
tar = "0.4"
bzip2 = "0.4"

# macOS microphone authorization (TCC) is queried via AVFoundation's
# AVCaptureDevice, reached through these objc bindings.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
block2 = "0.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
